refactor: migrate to canonical persistence model